[tool.poetry]
name = "endgame-simulations"
version = "0.1.0"
description = ""
authors = ["mark-todd <markpeter.todd@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
pydantic = ">=1.10, <2.0"
hdf5-dataclass = {git = "https://github.com/dreamingspires/hdf5-dataclass.git"}
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
isort = ">=5.11, <6.0"
black = ">=22.12, <23.0"
autoflake = ">=2.0.0, <3.0"
pre-commit = ">=2.21, <3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath="./"
venv=".venv"
